k8s/osdu/identity/base/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: osdu-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.6
          args: ["start"]
          ports:
            - containerPort: 8080
            - containerPort: 9000  # Khai báo thêm port quản trị
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000             # SỬA: Đổi từ 8080 sang 9000
            initialDelaySeconds: 60  # Tăng từ 30 lên 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000             # SỬA: Đổi từ 8080 sang 9000
            initialDelaySeconds: 180 # Tăng từ 60 lên 180
            periodSeconds: 10
