k8s/osdu/identity/base/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: osdu-identity
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: keycloak
