k8s/osdu/identity/base/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: osdu-identity
spec:
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
  selector:
    app: keycloak-db
